Fix bug of the playlist's song_count is a negative num (#61)
* Fix 'song_count is a negtive num' error